--- a/packages/bootstrap/scss/split-button/_variables.scss
+++ b/packages/bootstrap/scss/split-button/_variables.scss
@@ -1,19 +1,31 @@
 // Split-button
 
-/// Focus shadow of the split button.
+/// The focus shadow of the SplitButton.
 /// @group split-button
 $kendo-split-button-focus-shadow: $kendo-button-focus-shadow !default;
 
-/// Horizontal padding of the arrow button.
+/// The horizontal padding of the arrow Button.
 /// @group split-button
 $kendo-split-button-arrow-padding-x: $kendo-button-padding-y !default;
+/// The horizontal padding of the small arrow Button.
+/// @group split-button
 $kendo-split-button-sm-arrow-padding-x: $kendo-button-sm-padding-y !default;
+/// The horizontal padding of the medium arrow Button.
+/// @group split-button
 $kendo-split-button-md-arrow-padding-x: $kendo-button-md-padding-y !default;
+/// The horizontal padding of the large arrow Button.
+/// @group split-button
 $kendo-split-button-lg-arrow-padding-x: $kendo-button-lg-padding-y !default;
 
-/// Vertical padding of the arrow button.
+/// The vertical padding of the arrow Button.
 /// @group split-button
 $kendo-split-button-arrow-padding-y: $kendo-button-padding-y !default;
+/// The vertical padding of the small arrow Button.
+/// @group split-button
 $kendo-split-button-sm-arrow-padding-y: $kendo-button-sm-padding-y !default;
+/// The vertical padding of the medium arrow Button.
+/// @group split-button
 $kendo-split-button-md-arrow-padding-y: $kendo-button-md-padding-y !default;
+/// The vertical padding of the large arrow Button.
+/// @group split-button
 $kendo-split-button-lg-arrow-padding-y: $kendo-button-lg-padding-y !default;
