--- a/packages/fluent/scss/checkbox/_variables.scss
+++ b/packages/fluent/scss/checkbox/_variables.scss
@@ -4,15 +4,15 @@
 
 // Checkbox
 
-/// Border radius of radio button.
+/// The border radius of the CheckBox.
 /// @group checkbox
 $kendo-checkbox-border-radius: null !default;
 
-/// Border width of checkbox.
+/// The border width of the CheckBox.
 /// @group checkbox
 $kendo-checkbox-border-width: 1px !default;
 
-// Checkbox sizes
+// A map with the different CheckBox sizes.
 $kendo-checkbox-sizes: (
     sm: (
         size: map.get( $kendo-spacing, 4 ),
@@ -37,182 +37,182 @@ $kendo-checkbox-sizes: (
     )
 ) !default;
 
-/// Background color of checkbox.
+/// The background color of the CheckBox.
 /// @group checkbox
 $kendo-checkbox-bg: $kendo-component-bg !default;
-/// Color of checkbox.
+/// The text color of the CheckBox.
 /// @group checkbox
 $kendo-checkbox-text: transparent !default;
-/// Border color of checkbox.
+/// The border color of the CheckBox.
 /// @group checkbox
 $kendo-checkbox-border: get-theme-color-var( neutral-160 ) !default;
 
-/// Background color of hovered checkbox.
+/// The background color of the hovered CheckBox.
 /// @group checkbox
 $kendo-checkbox-hover-bg: $kendo-checkbox-bg !default;
-/// Color of hovered checkbox.
+/// The text color of the hovered CheckBox.
 /// @group checkbox
 $kendo-checkbox-hover-text: get-theme-color( neutral, 130 ) !default;
-/// Border color of hovered checkbox.
+/// The border color of the hovered CheckBox.
 /// @group checkbox
 $kendo-checkbox-hover-border: $kendo-checkbox-border !default;
 
-/// Background color of checked checkbox.
+/// The background color of the checked CheckBox.
 /// @group checkbox
 $kendo-checkbox-checked-bg: get-theme-color-var( primary-100 ) !default;
-/// Color of checked checkbox.
+/// The text color of the checked CheckBox.
 /// @group checkbox
 $kendo-checkbox-checked-text: $kendo-color-white !default;
-/// Border color of checked checkbox.
+/// The border color of the checked CheckBox.
 /// @group checkbox
 $kendo-checkbox-checked-border: $kendo-checkbox-checked-bg !default;
 
-/// Background of hovered and checked checkbox.
+/// The background of the hovered and checked CheckBox.
 /// @group checkbox
 $kendo-checkbox-hover-checked-bg: get-theme-color-var( primary-110 ) !default;
-/// Color of checked checkbox.
+/// The text color of the hovered and checked CheckBox.
 /// @group checkbox
 $kendo-checkbox-hover-checked-text: $kendo-color-white !default;
-/// Border of hovered and checked checkbox.
+/// The border color of the hovered and checked CheckBox.
 /// @group checkbox
 $kendo-checkbox-hover-checked-border: $kendo-checkbox-hover-checked-bg !default;
 
-/// Border color of focused checkbox.
+/// The border color of the focused CheckBox.
 /// @group checkbox
 $kendo-checkbox-focus-border: null !default;
-/// Box shadow of focused checkbox.
+/// The box shadow of the focused CheckBox.
 /// @group checkbox
 $kendo-checkbox-focus-shadow: null !default;
-/// The outline of a focused checkbox.
+/// The outline of the focused CheckBox.
 /// @group checkbox
 $kendo-checkbox-focus-outline: 1px solid get-theme-color-var( neutral-130 ) !default;
 $kendo-checkbox-focus-outline-offset: 2px !default;
 
-/// Background color of indeterminate checkbox.
+/// The background color of the indeterminate CheckBox.
 /// @group checkbox
 $kendo-checkbox-indeterminate-bg: $kendo-checkbox-bg !default;
-/// Color of indeterminate checkbox.
+/// The text color of the indeterminate CheckBox.
 /// @group checkbox
 $kendo-checkbox-indeterminate-text: get-theme-color( primary, 100 ) !default;
-/// Border color of indeterminate checkbox.
+/// The border color of the indeterminate CheckBox.
 /// @group checkbox
 $kendo-checkbox-indeterminate-border: get-theme-color-var( primary-100 ) !default;
 
-/// Background color of hovered and indeterminate checkbox.
+/// The background color of the hovered and indeterminate CheckBox.
 /// @group checkbox
 $kendo-checkbox-hover-indeterminate-bg: $kendo-checkbox-bg !default;
-/// Background color of hovered and indeterminate checkbox.
+/// The text color of the hovered and indeterminate CheckBox.
 /// @group checkbox
 $kendo-checkbox-hover-indeterminate-text: get-theme-color( primary, 110 ) !default;
-/// Border color of hovered and indeterminate checkbox.
+/// The border color of the hovered and indeterminate CheckBox.
 /// @group checkbox
 $kendo-checkbox-hover-indeterminate-border: get-theme-color-var( primary-110 ) !default;
 
-/// Background color of disabled checkbox.
+/// The background color of the disabled CheckBox.
 /// @group checkbox
 $kendo-checkbox-disabled-bg: $kendo-checkbox-bg !default;
-/// Color of disabled checkbox.
+/// The text color of the disabled CheckBox.
 /// @group checkbox
 $kendo-checkbox-disabled-text: get-theme-color-var( neutral-60 ) !default;
-/// Border color of disabled checkbox.
+/// The border color of the disabled CheckBox.
 /// @group checkbox
 $kendo-checkbox-disabled-border: get-theme-color-var( neutral-60 ) !default;
 
-/// Background color of disabled and checked checkbox.
+/// The background color of the disabled and checked CheckBox.
 /// @group checkbox
 $kendo-checkbox-disabled-checked-bg: get-theme-color-var( neutral-60 ) !default;
-/// Color of disabled and checked checkbox.
+/// The text color of the disabled and checked CheckBox.
 /// @group checkbox
 $kendo-checkbox-disabled-checked-text: $kendo-color-white !default;
-/// Border color of disabled and checked checkbox.
+/// The border color of the disabled and checked CheckBox.
 /// @group checkbox
 $kendo-checkbox-disabled-checked-border: get-theme-color-var( neutral-60 ) !default;
 
-/// Background color of disabled and indeterminate checkbox.
+/// The background color of the disabled and indeterminate CheckBox.
 /// @group checkbox
 $kendo-checkbox-disabled-indeterminate-bg: $kendo-checkbox-bg !default;
-/// Border color of disabled and indeterminate checkbox.
+/// The border color of the disabled and indeterminate CheckBox.
 /// @group checkbox
 $kendo-checkbox-disabled-indeterminate-text: get-theme-color( neutral, 60 ) !default;
-/// Border color of disabled and indeterminate checkbox.
+/// The border color of the disabled and indeterminate CheckBox.
 /// @group checkbox
 $kendo-checkbox-disabled-indeterminate-border: get-theme-color-var( neutral-60 ) !default;
 
-/// Background color of invalid checkbox.
+/// The background color of an invalid CheckBox.
 /// @group checkbox
 $kendo-checkbox-invalid-bg: $kendo-checkbox-bg !default;
-/// Color of invalid checkbox.
+/// The text color of an invalid CheckBox.
 /// @group checkbox
 $kendo-checkbox-invalid-text: $kendo-invalid-text !default;
-/// Border color of invalid checkbox.
+/// The border color of an invalid CheckBox.
 /// @group checkbox
 $kendo-checkbox-invalid-border: $kendo-invalid-border !default;
 
 
 // Checkbox indicator
 
-/// Type of checkbox indicator.
+/// The type of the CheckBox indicator.
 /// @group checkbox
 $kendo-checkbox-indicator-type: image !default;
 
-/// Glyph font family of checkbox indicator.
+/// The font family of the CheckBox indicator glyph.
 /// @group checkbox
 $kendo-checkbox-glyph-font-family: "WebComponentsIcons", monospace !default;
-/// Glyph of checkbox indicator.
+/// The glyph of the CheckBox indicator.
 /// @group checkbox
 $kendo-checkbox-checked-glyph: "\e118" !default;
-/// Glyph of indeterminate checkbox indicator.
+/// The glyph of the indeterminate CheckBox indicator.
 /// @group checkbox
 $kendo-checkbox-indeterminate-glyph: "\e121" !default;
 
-/// Image of hovered checkbox indicator.
+/// The image of the hovered CheckBox indicator.
 /// @group checkbox
 $kendo-checkbox-hover-image: escape-svg( url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><path fill='none' stroke='#{$kendo-checkbox-hover-text}' stroke-linecap='square' stroke-linejoin='square' stroke-width='2' d='M3,8 l3,3 l7-7'/></svg>") ) !default;
-/// Image of checked checkbox indicator.
+/// The image of the checked CheckBox indicator.
 /// @group checkbox
 $kendo-checkbox-checked-image: escape-svg( url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><path fill='none' stroke='#{$kendo-checkbox-checked-text}' stroke-linecap='square' stroke-linejoin='square' stroke-width='2' d='M3,8 l3,3 l7-7'/></svg>") ) !default;
-/// Image of indeterminate checkbox indicator.
+/// The image of the indeterminate CheckBox indicator.
 /// @group checkbox
 $kendo-checkbox-indeterminate-image: escape-svg( url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect x='3' y='3' width='10' height='10' rx='2' fill='#{$kendo-checkbox-indeterminate-text}'/></svg>") ) !default;
-/// Image of hovered and checked checkbox indicator.
+/// The image of the hovered and checked CheckBox indicator.
 /// @group checkbox
 $kendo-checkbox-hover-checked-image: escape-svg( url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><path fill='none' stroke='#{$kendo-checkbox-hover-checked-text}' stroke-linecap='square' stroke-linejoin='square' stroke-width='2' d='M3,8 l3,3 l7-7'/></svg>") ) !default;
-/// Image of hovered and indeterminate checkbox indicator.
+/// The image of the hovered and indeterminate CheckBox indicator.
 /// @group checkbox
 $kendo-checkbox-hover-indeterminate-image: escape-svg( url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect x='3' y='3' width='10' height='10' rx='2' fill='#{$kendo-checkbox-hover-indeterminate-text}'/></svg>") ) !default;
-/// Image of checked checkbox indicator.
+/// The image of the checked CheckBox indicator.
 /// @group checkbox
 $kendo-checkbox-disabled-checked-image: escape-svg( url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><path fill='none' stroke='#{$kendo-checkbox-disabled-checked-text}' stroke-linecap='square' stroke-linejoin='square' stroke-width='2' d='M3,8 l3,3 l7-7'/></svg>") ) !default;
-/// Image of indeterminate checkbox indicator.
+/// The image of the indeterminate CheckBox indicator.
 /// @group checkbox
 $kendo-checkbox-disabled-indeterminate-image: escape-svg( url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect x='3' y='3' width='10' height='10' rx='2' fill='#{$kendo-checkbox-disabled-indeterminate-text}'/></svg>") ) !default;
 
 
 // Checkbox label
 
-/// The horizontal margin of the checkbox inside a label.
+/// The horizontal margin of the CheckBox inside a label.
 /// @group checkbox
 $kendo-checkbox-label-margin-x: map.get( $kendo-spacing, 2 ) !default;
 
 
 // Checkbox list
 
-/// Spacing between items of horizontal checkbox list.
+/// The spacing between the items in a horizontal CheckBox list.
 /// @group checkbox
 $kendo-checkbox-list-spacing: map.get( $kendo-spacing, 4 ) !default;
-/// Horizontal padding of checkbox list items.
+/// The horizontal padding of the CheckBox list items.
 /// @group checkbox
 $kendo-checkbox-list-item-padding-x: 0px !default;
-/// Vertical padding of checkbox list items.
+/// The vertical padding of the CheckBox list items.
 /// @group checkbox
 $kendo-checkbox-list-item-padding-y: $kendo-list-md-item-padding-y !default;
 
 
 // Checkbox ripple
 
-/// Background color of checkbox ripple.
+/// The background color of the CheckBox' ripple.
 /// @group checkbox
 $kendo-checkbox-ripple-bg: get-theme-color-var( primary-100 ) !default;
-/// Opacity of checkbox ripple.
+/// The opacity of the CheckBox' ripple.
 /// @group checkbox
 $kendo-checkbox-ripple-opacity: .25 !default;
