--- a/packages/fluent/scss/switch/_variables.scss
+++ b/packages/fluent/scss/switch/_variables.scss
@@ -1,25 +1,26 @@
 @use "../core/" as *;
 
-/// Font family of the switch.
+/// The font family of the Switch.
 /// @group switch
 $kendo-switch-font-family: var( --kendo-font-family, normal ) !default;
 
-/// Border width of the switch track.
+/// The border width of the Switch track.
 /// @group switch
 $kendo-switch-track-border-width: 1px !default;
 
-/// Border width of the switch thumb.
+/// The border width of the Switch thumb.
 /// @group switch
 $kendo-switch-thumb-border-width: 0 !default;
 
-/// Text transform of the switch label.
+/// The text transform of the Switch label.
 /// @group switch
 $kendo-switch-label-text-transform: uppercase !default;
-/// Display of the switch label.
+
+/// The display of the Switch label.
 /// @group switch
 $kendo-switch-label-display: none !default;
 
-/// Map with the different switch sizes.
+/// The map with the different Switch sizes.
 /// @group switch
 $kendo-switch-sizes: (
     sm: ( font-size: 10px, track-width: 36px, track-height: 16px, thumb-width: 10px, thumb-height: 10px, thumb-offset: 3px, label-offset: 4px ),
@@ -27,147 +28,147 @@ $kendo-switch-sizes: (
     lg: ( font-size: 10px, track-width: 44px, track-height: 24px, thumb-width: 14px, thumb-height: 14px, thumb-offset: 5px, label-offset: 6px )
 ) !default;
 
-/// The ring around the focused switch.
+/// The ring around the focused Switch.
 /// @group switch
 $kendo-switch-focus-ring: 1px solid get-theme-color-var( neutral-130 ) !default;
 
-/// The background of the track when the switch is not checked.
+/// The background of the track when the Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-bg: var( --kendo-component-bg, transparent ) !default;
-/// The text color of the track when the switch is not checked.
+/// The text color of the track when the Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-text: var( --kendo-component-text, inherit ) !default;
-/// The border color of the track when the switch is not checked.
+/// The border color of the track when the Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-border: get-theme-color-var( neutral-110 ) !default;
 
-/// The background of the track when the hovered switch is not checked.
+/// The background of the track when the hovered Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-hover-bg: var( --kendo-component-bg, transparent ) !default;
-/// The text color of the track when the hovered switch is not checked.
+/// The text color of the track when the hovered Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-hover-text: var( --kendo-component-text, inherit ) !default;
-/// The border color of the track when the hovered switch is not checked.
+/// The border color of the track when the hovered Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-hover-border: get-theme-color-var( neutral-160 ) !default;
 
-/// The background of the track when the focused switch is not checked.
+/// The background of the track when the focused Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-focus-bg: var( --kendo-component-bg, transparent ) !default;
-/// The text color of the track when the focused switch is not checked.
+/// The text color of the track when the focused Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-focus-text: var( --kendo-component-text, inherit ) !default;
-/// The border color of the track when the focused switch is not checked.
+/// The border color of the track when the focused Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-focus-border: get-theme-color-var( neutral-110 ) !default;
 
-/// The background of the track when the disabled switch is not checked.
+/// The background of the track when the disabled Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-disabled-bg: var( --kendo-component-bg, transparent ) !default;
-/// The text color of the track when the disabled switch is not checked.
+/// The text color of the track when the disabled Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-disabled-text: var( --kendo-component-text, inherit ) !default;
-/// The border color of the track when the disabled switch is not checked.
+/// The border color of the track when the disabled Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-disabled-border: get-theme-color-var( neutral-60 ) !default;
 
-/// The background of the thumb when the switch is not checked.
+/// The background of the thumb when the Switch is not checked.
 /// @group switch
 $kendo-switch-off-thumb-bg: get-theme-color-var( neutral-130 ) !default;
-/// The text color of the thumb when the switch is not checked.
+/// The text color of the thumb when the Switch is not checked.
 /// @group switch
 $kendo-switch-off-thumb-text: inherit !default;
-/// The border color of the thumb when the switch is not checked.
+/// The border color of the thumb when the Switch is not checked.
 /// @group switch
 $kendo-switch-off-thumb-border: get-theme-color-var( neutral-130 ) !default;
 
-/// The background of the thumb when the hovered switch is not checked.
+/// The background of the thumb when the hovered Switch is not checked.
 /// @group switch
 $kendo-switch-off-thumb-hover-bg: get-theme-color-var( neutral-160 ) !default;
-/// The text color of the thumb when the hovered switch is not checked.
+/// The text color of the thumb when the hovered Switch is not checked.
 /// @group switch
 $kendo-switch-off-thumb-hover-text: inherit !default;
-/// The border color of the thumb when the hovered switch is not checked.
+/// The border color of the thumb when the hovered Switch is not checked.
 /// @group switch
 $kendo-switch-off-thumb-hover-border: get-theme-color-var( neutral-160 ) !default;
 
-/// The background of the thumb when the disabled switch is not checked.
+/// The background of the thumb when the disabled Switch is not checked.
 /// @group switch
 $kendo-switch-off-thumb-disabled-bg: get-theme-color-var( neutral-60 ) !default;
-/// The text color of the thumb when the disabled switch is not checked.
+/// The text color of the thumb when the disabled Switch is not checked.
 /// @group switch
 $kendo-switch-off-thumb-disabled-text: inherit !default;
-/// The border color of the thumb when the disabled switch is not checked.
+/// The border color of the thumb when the disabled Switch is not checked.
 /// @group switch
 $kendo-switch-off-thumb-disabled-border: get-theme-color-var( neutral-60 ) !default;
 
 
-/// The background of the track when the switch is checked.
+/// The background of the track when the Switch is checked.
 /// @group switch
 $kendo-switch-on-track-bg: get-theme-color-var( primary-100 ) !default;
-/// The text color of the track when the switch is checked.
+/// The text color of the track when the Switch is checked.
 /// @group switch
 $kendo-switch-on-track-text: $kendo-color-white !default;
-/// The border color of the track when the switch is checked.
+/// The border color of the track when the Switch is checked.
 /// @group switch
 $kendo-switch-on-track-border: $kendo-switch-on-track-bg !default;
 
-/// The background of the track when the hovered switch is checked.
+/// The background of the track when the hovered Switch is checked.
 /// @group switch
 $kendo-switch-on-track-hover-bg: get-theme-color-var( primary-110 ) !default;
-/// The text color of the track when the hovered switch is checked.
+/// The text color of the track when the hovered Switch is checked.
 /// @group switch
 $kendo-switch-on-track-hover-text: $kendo-color-white !default;
-/// The border color of the track when the hovered switch is checked.
+/// The border color of the track when the hovered Switch is checked.
 /// @group switch
 $kendo-switch-on-track-hover-border: $kendo-switch-on-track-hover-bg !default;
 
-/// The background of the track when the focused switch is checked.
+/// The background of the track when the focused Switch is checked.
 /// @group switch
 $kendo-switch-on-track-focus-bg: get-theme-color-var( primary-100 ) !default;
-/// The text color of the track when the focused switch is checked.
+/// The text color of the track when the focused Switch is checked.
 /// @group switch
 $kendo-switch-on-track-focus-text: $kendo-color-white !default;
-/// The border color of the track when the focused switch is checked.
+/// The border color of the track when the focused Switch is checked.
 /// @group switch
 $kendo-switch-on-track-focus-border: $kendo-switch-on-track-focus-bg !default;
 
-/// The background of the track when the disabled switch is checked.
+/// The background of the track when the disabled Switch is checked.
 /// @group switch
 $kendo-switch-on-track-disabled-bg: get-theme-color-var( neutral-60 ) !default;
-/// The text color of the track when the disabled switch is checked.
+/// The text color of the track when the disabled Switch is checked.
 /// @group switch
 $kendo-switch-on-track-disabled-text: $kendo-color-white !default;
-/// The border color of the track when the disabled switch is checked.
+/// The border color of the track when the disabled Switch is checked.
 /// @group switch
 $kendo-switch-on-track-disabled-border: $kendo-switch-on-track-disabled-bg !default;
 
-/// The background of the thumb when the switch is checked.
+/// The background of the thumb when the Switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-bg: $kendo-color-white !default;
-/// The text color of the thumb when the switch is checked.
+/// The text color of the thumb when the Switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-text: inherit !default;
-/// The border color of the thumb when the switch is checked.
+/// The border color of the thumb when the Switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-border: inherit !default;
 
-/// The background of the thumb when the hovered switch is checked.
+/// The background of the thumb when the hovered Switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-hover-bg: $kendo-color-white !default;
-/// The text color of the thumb when the hovered switch is checked.
+/// The text color of the thumb when the hovered Switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-hover-text: inherit !default;
-/// The border color of the thumb when the hovered switch is checked.
+/// The border color of the thumb when the hovered Switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-hover-border: inherit !default;
 
-/// The background of the thumb when the disabled switch is checked.
+/// The background of the thumb when the disabled Switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-disabled-bg: get-theme-color-var( neutral-20 ) !default;
-/// The text color of the thumb when the disabled switch is checked.
+/// The text color of the thumb when the disabled Switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-disabled-text: inherit !default;
-/// The border color of the thumb when the disabled switch is checked.
+/// The border color of the thumb when the disabled Switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-disabled-border: get-theme-color-var( neutral-20 ) !default;
