--- a/packages/bootstrap/scss/switch/_variables.scss
+++ b/packages/bootstrap/scss/switch/_variables.scss
@@ -1,25 +1,26 @@
 // Switch
 
-/// Font family of the switch.
+/// The font family of the Switch.
 /// @group switch
 $kendo-switch-font-family: null !default;
 
-/// Border width of the switch track.
+/// The border width of the Switch track.
 /// @group switch
 $kendo-switch-track-border-width: 1px !default;
 
-/// Border width of the switch thumb.
+/// The border width of the Switch thumb.
 /// @group switch
 $kendo-switch-thumb-border-width: null !default;
 
-/// Text transform of the switch label.
+/// The text transform of the Switch label.
 /// @group switch
 $kendo-switch-label-text-transform: null !default;
-/// Display of the switch label.
+
+/// The display of the Switch label.
 /// @group switch
 $kendo-switch-label-display: none !default;
 
-/// Map with the different switch sizes.
+/// The map with the different Switch sizes.
 /// @group switch
 $kendo-switch-sizes: (
     sm: ( font-size: null, track-width: 48px, track-height: 26px, thumb-width: 20px, thumb-height: 20px, thumb-offset: 3px, label-offset: null ),
@@ -27,165 +28,165 @@ $kendo-switch-sizes: (
     lg: ( font-size: null, track-width: 64px, track-height: 34px, thumb-width: 28px, thumb-height: 28px, thumb-offset: 3px, label-offset: null )
 ) !default;
 
-/// The background of the track when the switch is not checked.
+/// The background of the track when the Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-bg: $kendo-component-bg !default;
-/// The text color of the track when the switch is not checked.
+/// The text color of the track when the Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-text: null !default;
-/// The border color of the track when the switch is not checked.
+/// The border color of the track when the Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-border: $gray-500 !default;
-/// The background gradient of the track when the switch is not checked.
+/// The background gradient of the track when the Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-gradient: null !default;
 
-/// The background of the track when the hovered switch is not checked.
+/// The background of the track when the hovered Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-hover-bg: null !default;
-/// The text color of the track when the hovered switch is not checked.
+/// The text color of the track when the hovered Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-hover-text: null !default;
-/// The border color of the track when the hovered switch is not checked.
+/// The border color of the track when the hovered Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-hover-border: null !default;
-/// The background gradient of the track when the hovered switch is not checked.
+/// The background gradient of the track when the hovered Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-hover-gradient: null !default;
 
-/// The background of the track when the focused switch is not checked.
+/// The background of the track when the focused Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-focus-bg: null !default;
-/// The text color of the track when the focused switch is not checked.
+/// The text color of the track when the focused Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-focus-text: null !default;
-/// The border color of the track when the focused switch is not checked.
+/// The border color of the track when the focused Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-focus-border: k-color-mix( $kendo-switch-off-track-bg, $kendo-color-primary ) !default;
-/// The background gradient of the track when the focused switch is not checked.
+/// The background gradient of the track when the focused Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-focus-gradient: null !default;
-/// The ring around the track when the focused switch is not checked.
+/// The ring around the track when the focused Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-focus-ring: .25rem solid rgba( $kendo-color-primary, .25 ) !default;
 
-/// The background of the track when the disabled switch is not checked.
+/// The background of the track when the disabled Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-disabled-bg: if( $kendo-is-dark-theme, $gray-800, $gray-200 ) !default;
-/// The text color of the track when the disabled switch is not checked.
+/// The text color of the track when the disabled Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-disabled-text: null !default;
-/// The border color of the track when the disabled switch is not checked.
+/// The border color of the track when the disabled Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-disabled-border: null !default;
-/// The background gradient of the track when the disabled switch is not checked.
+/// The background gradient of the track when the disabled Switch is not checked.
 /// @group switch
 $kendo-switch-off-track-disabled-gradient: null !default;
 
-/// The background of the thumb when the switch is not checked.
+/// The background of the thumb when the Switch is not checked.
 /// @group switch
 $kendo-switch-off-thumb-bg: $gray-500 !default;
-/// The text color of the thumb when the switch is not checked.
+/// The text color of the thumb when the Switch is not checked.
 /// @group switch
 $kendo-switch-off-thumb-text: null !default;
-/// The border color of the thumb when the switch is not checked.
+/// The border color of the thumb when the Switch is not checked.
 /// @group switch
 $kendo-switch-off-thumb-border: null !default;
-/// The background gradient of the thumb when the switch is not checked.
+/// The background gradient of the thumb when the Switch is not checked.
 /// @group switch
 $kendo-switch-off-thumb-gradient: null !default;
 
-/// The background of the thumb when the hovered switch is not checked.
+/// The background of the thumb when the hovered Switch is not checked.
 /// @group switch
 $kendo-switch-off-thumb-hover-bg: null !default;
-/// The text color of the thumb when the hovered switch is not checked.
+/// The text color of the thumb when the hovered Switch is not checked.
 /// @group switch
 $kendo-switch-off-thumb-hover-text: null !default;
-/// The border color of the thumb when the hovered switch is not checked.
+/// The border color of the thumb when the hovered Switch is not checked.
 /// @group switch
 $kendo-switch-off-thumb-hover-border: null !default;
-/// The background gradient of the thumb when the hovered switch is not checked.
+/// The background gradient of the thumb when the hovered Switch is not checked.
 /// @group switch
 $kendo-switch-off-thumb-hover-gradient: null !default;
 
 
-/// The background of the track when the switch is checked.
+/// The background of the track when the Switch is checked.
 /// @group switch
 $kendo-switch-on-track-bg: $kendo-color-primary !default;
-/// The text color of the track when the switch is checked.
+/// The text color of the track when the Switch is checked.
 /// @group switch
 $kendo-switch-on-track-text: null !default;
-/// The border color of the track when the switch is checked.
+/// The border color of the track when the Switch is checked.
 /// @group switch
 $kendo-switch-on-track-border: $kendo-switch-on-track-bg !default;
-/// The background gradient of the track when the switch is checked.
+/// The background gradient of the track when the Switch is checked.
 /// @group switch
 $kendo-switch-on-track-gradient: null !default;
 
-/// The background of the track when the hovered switch is checked.
+/// The background of the track when the hovered Switch is checked.
 /// @group switch
 $kendo-switch-on-track-hover-bg: null !default;
-/// The text color of the track when the hovered switch is checked.
+/// The text color of the track when the hovered Switch is checked.
 /// @group switch
 $kendo-switch-on-track-hover-text: null !default;
-/// The border color of the track when the hovered switch is checked.
+/// The border color of the track when the hovered Switch is checked.
 /// @group switch
 $kendo-switch-on-track-hover-border: null !default;
-/// The background gradient of the track when the hovered switch is checked.
+/// The background gradient of the track when the hovered Switch is checked.
 /// @group switch
 $kendo-switch-on-track-hover-gradient: null !default;
 
-/// The background of the track when the focused switch is checked.
+/// The background of the track when the focused Switch is checked.
 /// @group switch
 $kendo-switch-on-track-focus-bg: null !default;
-/// The text color of the track when the focused switch is checked.
+/// The text color of the track when the focused Switch is checked.
 /// @group switch
 $kendo-switch-on-track-focus-text: null !default;
-/// The border color of the track when the focused switch is checked.
+/// The border color of the track when the focused Switch is checked.
 /// @group switch
 $kendo-switch-on-track-focus-border: null !default;
-/// The background gradient of the track when the focused switch is checked.
+/// The background gradient of the track when the focused Switch is checked.
 /// @group switch
 $kendo-switch-on-track-focus-gradient: null !default;
-/// The ring around the track when the focused switch is checked.
+/// The ring around the track when the focused Switch is checked.
 /// @group switch
 $kendo-switch-on-track-focus-ring: .25rem solid rgba( $kendo-switch-on-track-border, .25 ) !default;
 
-/// The background of the track when the disabled switch is checked.
+/// The background of the track when the disabled Switch is checked.
 /// @group switch
 $kendo-switch-on-track-disabled-bg: k-try-tint( $kendo-switch-on-track-bg, 50% ) !default;
-/// The text color of the track when the disabled switch is checked.
+/// The text color of the track when the disabled Switch is checked.
 /// @group switch
 $kendo-switch-on-track-disabled-text: null !default;
-/// The border color of the track when the disabled switch is checked.
+/// The border color of the track when the disabled Switch is checked.
 /// @group switch
 $kendo-switch-on-track-disabled-border: null !default;
-/// The background gradient of the track when the disabled switch is checked.
+/// The background gradient of the track when the disabled Switch is checked.
 /// @group switch
 $kendo-switch-on-track-disabled-gradient: null !default;
 
-/// The background of the thumb when the switch is checked.
+/// The background of the thumb when the Switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-bg: k-contrast-color( $kendo-switch-on-track-bg ) !default;
-/// The text color of the thumb when the switch is checked.
+/// The text color of the thumb when the Switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-text: null !default;
-/// The border color of the thumb when the switch is checked.
+/// The border color of the thumb when the Switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-border: null !default;
-/// The background gradient of the thumb when the switch is checked.
+/// The background gradient of the thumb when the Switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-gradient: null !default;
 
-/// The background of the thumb when the hovered switch is checked.
+/// The background of the thumb when the hovered Switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-hover-bg: null !default;
-/// The text color of the thumb when the hovered switch is checked.
+/// The text color of the thumb when the hovered Switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-hover-text: null !default;
-/// The border color of the thumb when the hovered switch is checked.
+/// The border color of the thumb when the hovered Switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-hover-border: null !default;
-/// The background gradient of the thumb when the hovered switch is checked.
+/// The background gradient of the thumb when the hovered Switch is checked.
 /// @group switch
 $kendo-switch-on-thumb-hover-gradient: null !default;
