--- a/packages/classic/scss/button/_variables.scss
+++ b/packages/classic/scss/button/_variables.scss
@@ -1,58 +1,85 @@
 // Button
 
-/// Width of the border around the button.
+/// The width of the border around the Button.
 /// @group button
 $kendo-button-border-width: 1px !default;
 
-/// Border radius of the button.
+/// The border radius of the Button.
 /// @group button
 $kendo-button-border-radius: null !default;
 
-/// Horizontal padding of the button.
+/// The horizontal padding of the Button.
 /// @group button
 $kendo-button-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
-/// Vertical padding of the button.
+/// The horizontal padding of the small Button.
+/// @group button
+$kendo-button-sm-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
+/// The horizontal padding of the medium Button.
+/// @group button
+$kendo-button-md-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
+/// The horizontal padding of the large Button.
+/// @group button
+$kendo-button-lg-padding-x: k-map-get( $kendo-spacing, 3 ) !default;
+
+/// The vertical padding of the Button.
 /// @group button
 $kendo-button-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
-/// Font family of the button.
+/// The vertical padding of the small Button.
+/// @group button
+$kendo-button-sm-padding-y: k-map-get( $kendo-spacing, 0.5 ) !default; // sass-lint:disable-line leading-zero
+/// The vertical padding of the medium Button.
+/// @group button
+$kendo-button-md-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
+/// The vertical padding of the large Button.
+/// @group button
+$kendo-button-lg-padding-y: k-map-get( $kendo-spacing, 2 ) !default;
+
+/// The font family of the Button.
 /// @group button
 $kendo-button-font-family: $kendo-font-family !default;
-/// Font sizes of the button.
+
+/// The font size of the Button.
 /// @group button
 $kendo-button-font-size: $kendo-font-size-md !default;
-/// Line heights used along with $kendo-font-size.
+/// The font size of the small Button.
+/// @group button
+$kendo-button-sm-font-size: $kendo-font-size-md !default;
+/// The font size of the medium Button.
+/// @group button
+$kendo-button-md-font-size: $kendo-font-size-md !default;
+/// The font size of the large Button.
+/// @group button
+$kendo-button-lg-font-size: $kendo-font-size-lg !default;
+
+/// The line height used along with $kendo-font-size.
 /// @group button
 $kendo-button-line-height: $kendo-line-height-md !default;
-
-$kendo-button-sm-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
-$kendo-button-sm-padding-y: k-map-get( $kendo-spacing, 0.5 ) !default; // sass-lint:disable-line leading-zero
-$kendo-button-sm-font-size: $kendo-font-size-md !default;
+/// The line height used along with the $kendo-font-size of the small Button.
+/// @group button
 $kendo-button-sm-line-height: $kendo-line-height-md !default;
-
-$kendo-button-md-padding-x: k-map-get( $kendo-spacing, 2 ) !default;
-$kendo-button-md-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
-$kendo-button-md-font-size: $kendo-font-size-md !default;
+/// The line height used along with the $kendo-font-size of the medium Button.
+/// @group button
 $kendo-button-md-line-height: $kendo-line-height-md !default;
-
-$kendo-button-lg-padding-x: k-map-get( $kendo-spacing, 3 ) !default;
-$kendo-button-lg-padding-y: k-map-get( $kendo-spacing, 2 ) !default;
-$kendo-button-lg-font-size: $kendo-font-size-lg !default;
+/// The line height used along with the $kendo-font-size of the large Button.
+/// @group button
 $kendo-button-lg-line-height: $kendo-line-height-lg !default;
 
-/// Calculated height of the button.
+/// The calculated height of the Button.
 /// @group button
 $kendo-button-calc-size: calc( #{$kendo-button-line-height * 1em} + #{$kendo-button-padding-y * 2} + #{$kendo-button-border-width * 2} ) !default;
 $kendo-button-sm-calc-size: calc( #{$kendo-button-sm-line-height * 1em} + #{$kendo-button-sm-padding-y * 2} + #{$kendo-button-border-width * 2} ) !default;
 $kendo-button-md-calc-size: calc( #{$kendo-button-md-line-height * 1em} + #{$kendo-button-md-padding-y * 2} + #{$kendo-button-border-width * 2} ) !default;
 $kendo-button-lg-calc-size: calc( #{$kendo-button-lg-line-height * 1em} + #{$kendo-button-lg-padding-y * 2} + #{$kendo-button-border-width * 2} ) !default;
 
-/// Calculated inner height of the button. Without the border width.
+/// The calculated inner height of the Button excluding the border width.
 /// @group button
 $kendo-button-inner-calc-size: calc( #{$kendo-button-line-height * 1em} + #{$kendo-button-padding-y * 2} ) !default;
 $kendo-button-sm-inner-calc-size: calc( #{$kendo-button-sm-line-height * 1em} + #{$kendo-button-sm-padding-y * 2} ) !default;
 $kendo-button-md-inner-calc-size: calc( #{$kendo-button-md-line-height * 1em} + #{$kendo-button-md-padding-y * 2} ) !default;
 $kendo-button-lg-inner-calc-size: calc( #{$kendo-button-lg-line-height * 1em} + #{$kendo-button-lg-padding-y * 2} ) !default;
 
+/// The sizes map for the Button.
+/// @group button
 $kendo-button-sizes: (
     sm: (
         padding-x: $kendo-button-sm-padding-x,
@@ -74,110 +101,110 @@ $kendo-button-sizes: (
     )
 ) !default;
 
-/// Theme colors map for the button.
+/// The theme colors map for the Button.
 /// @group button
 $kendo-button-theme-colors: k-map-merge(
     $kendo-theme-colors,
     ( "base": $kendo-base-bg )
 ) !default;
 
-/// The base background of the button.
+/// The base background of the Button.
 /// @group button
 $kendo-button-bg: $kendo-base-bg !default;
-/// The base text color of the button.
+/// The base text color of the Button.
 /// @group button
 $kendo-button-text: $kendo-base-text !default;
-/// The base border color of the button.
+/// The base border color of the Button.
 /// @group button
 $kendo-button-border: k-try-shade( $kendo-button-bg, 2 ) !default;
-/// The base background gradient of the button.
+/// The base background gradient of the Button.
 /// @group button
 $kendo-button-gradient: $kendo-base-gradient !default;
-/// The base shadow of the button.
+/// The base shadow of the Button.
 /// @group button
 $kendo-button-shadow: null !default;
 
-/// The base background of hovered button.
+/// The base background of the hovered Button.
 /// @group button
 $kendo-button-hover-bg: k-try-shade( $kendo-button-bg, 1 ) !default;
-/// The base text color of hovered button.
+/// The base text color of the hovered Button.
 /// @group button
 $kendo-button-hover-text: null !default;
-/// The base border color of hovered button.
+/// The base border color of the hovered Button.
 /// @group button
 $kendo-button-hover-border: k-try-shade( $kendo-button-bg, 3 ) !default;
-/// The base background gradient of hovered button.
+/// The base background gradient of the hovered Button.
 /// @group button
 $kendo-button-hover-gradient: null !default;
-/// The base shadow of hovered button.
+/// The base shadow of the hovered Button.
 /// @group button
 $kendo-button-hover-shadow: null !default;
 
-/// The base background color of active button.
+/// The base background color of the active Button.
 /// @group button
 $kendo-button-active-bg: k-try-shade( $kendo-button-bg, 2 ) !default;
-/// The base text color of active button.
+/// The base text color of the active Button.
 /// @group button
 $kendo-button-active-text: null !default;
-/// The base border color of active button.
+/// The base border color of the active Button.
 /// @group button
 $kendo-button-active-border: k-try-shade( $kendo-button-bg, 4 ) !default;
-/// The base background gradient of active button.
+/// The base background gradient of the active Button.
 /// @group button
 $kendo-button-active-gradient: null !default;
-/// The base shadow of active button.
+/// The base shadow of the active Button.
 /// @group button
 $kendo-button-active-shadow: null !default;
 
-/// The base background color of selected button.
+/// The base background color of the selected Button.
 /// @group button
 $kendo-button-selected-bg: $kendo-color-primary !default;
-/// The text color of selected buttons.
+/// The text color of the selected Button.
 /// @group button
 $kendo-button-selected-text: k-contrast-legacy( $kendo-button-selected-bg ) !default;
-/// The border color of selected buttons.
+/// The border color of the selected Button.
 /// @group button
 $kendo-button-selected-border: $kendo-button-selected-bg !default;
-/// The background gradient of selected buttons.
+/// The background gradient of the selected Button.
 /// @group button
 $kendo-button-selected-gradient: $kendo-button-active-gradient !default;
-/// The base shadow of selected button.
+/// The base shadow of the selected Button.
 /// @group button
 $kendo-button-selected-shadow: $kendo-button-active-shadow !default;
 
-/// The base background of focused button.
+/// The base background of the focused Button.
 /// @group button
 $kendo-button-focus-bg: null !default;
-/// The base text color of focused button.
+/// The base text color of the focused Button.
 /// @group button
 $kendo-button-focus-text: null !default;
-/// The base border color of focused button.
+/// The base border color of the focused Button.
 /// @group button
 $kendo-button-focus-border: null !default;
-/// The base background gradient of focused button.
+/// The base background gradient of the focused Button.
 /// @group button
 $kendo-button-focus-gradient: null !default;
-/// The base shadow of focused button.
+/// The base shadow of the focused Button.
 /// @group button
 $kendo-button-focus-shadow: 0 0 4px 0 rgba( $kendo-button-border, .75 ) !default;
 
-/// The base background of disabled button.
+/// The base background of the disabled Button.
 /// @group button
 $kendo-button-disabled-bg: null !default;
-/// The base text color of disabled button.
+/// The base text color of the disabled Button.
 /// @group button
 $kendo-button-disabled-text: null !default;
-/// The base border color of disabled buttons.
+/// The base border color of the disabled Button.
 /// @group button
 $kendo-button-disabled-border: null !default;
-/// The base background gradient of disabled button.
+/// The base background gradient of the disabled Button.
 /// @group button
 $kendo-button-disabled-gradient: null !default;
-/// The base shadow of disabled button.
+/// The base shadow of the disabled Button.
 /// @group button
 $kendo-button-disabled-shadow: null !default;
 
-// Solid button
+// Solid Button
 $kendo-solid-button-gradient: $kendo-base-gradient !default;
 $kendo-solid-button-shade-function: "k-try-shade" !default;
 $kendo-solid-button-shade-text-amount: 0 !default;
@@ -194,37 +221,37 @@ $kendo-solid-button-shadow-blur: 4px !default;
 $kendo-solid-button-shadow-spread: 0px !default;
 $kendo-solid-button-shadow-opacity: .75 !default;
 
-// Outline button
+// Outline Button
 $kendo-outline-button-shadow: true !default;
 $kendo-outline-button-shadow-blur: 4px !default;
 $kendo-outline-button-shadow-spread: 0px !default;
 $kendo-outline-button-shadow-opacity: .75 !default;
 
-// Link button
+// Link Button
 $kendo-link-button-shadow: true !default;
 $kendo-link-button-shadow-blur: 4px !default;
 $kendo-link-button-shadow-spread: 0px !default;
 $kendo-link-button-shadow-opacity: .75 !default;
 
-// Clear button
+// Clear Button
 $kendo-clear-button-focus-opacity: .1 !default;
 
-/// The overlay opacity of hovered flat button. Used to create background for the flat button.
+/// The overlay opacity of the hovered flat Button. Used to create a background for the flat Button.
 /// @group button
 $kendo-flat-button-hover-opacity: .08 !default;
-/// The overlay opacity of focused flat button. Used to create background for the flat button.
+/// The overlay opacity of the focused flat Button. Used to create a background for the flat Button.
 /// @group button
 $kendo-flat-button-focus-opacity: .12 !default;
-/// The overlay opacity of active flat button. Used to create background for the flat button.
+/// The overlay opacity of the active flat Button. Used to create background for the flat Button.
 /// @group button
 $kendo-flat-button-active-opacity: .16 !default;
-/// The overlay opacity of selected flat button. Used to create background for the flat button.
+/// The overlay opacity of the selected flat Button. Used to create background for the flat Button.
 /// @group button
 $kendo-flat-button-selected-opacity: .2 !default;
-/// The opacity of the flat button focus ring. Used to create border for the flat button.
+/// The opacity of the flat Button focus ring. Used to create a border for the flat Button.
 /// @group button
 $kendo-flat-button-focus-ring-opacity: .12 !default;
 
-/// The color transition of the flat button.
+/// The color transition of the flat Button.
 /// @group button
 $kendo-button-transition: color .2s ease-in-out !default;
