--- a/packages/classic/scss/chip/_variables.scss
+++ b/packages/classic/scss/chip/_variables.scss
@@ -3,47 +3,71 @@
 
 // Chip
 
-/// Width of the border around the button.
+/// The width of the border around the Chip.
 /// @group chip
 $kendo-chip-border-width: 1px !default;
-/// The spacing between the text and the icons of the chip.
+/// The spacing between the text and the icons of the Chip.
 /// @group chip
 $kendo-chip-spacing: k-map-get( $kendo-spacing, 1 ) !default;
 
-/// Horizontal padding of the chip.
+/// The horizontal padding of the Chip.
 /// @group chip
 $kendo-chip-padding-x: k-map-get( $kendo-spacing, 1 ) !default;
+/// The horizontal padding of the small Chip.
+/// @group chip
 $kendo-chip-sm-padding-x: k-map-get( $kendo-spacing, 1 ) !default;
+/// The horizontal padding of the medium Chip.
+/// @group chip
 $kendo-chip-md-padding-x: k-map-get( $kendo-spacing, 1 ) !default;
+/// The horizontal padding of the large Chip.
+/// @group chip
 $kendo-chip-lg-padding-x: k-map-get( $kendo-spacing, 1 ) !default;
 
-/// Vertical padding of the chip.
+/// The vertical padding of the Chip.
 /// @group chip
 $kendo-chip-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
+/// The vertical padding of the small Chip.
+/// @group chip
 $kendo-chip-sm-padding-y: k-map-get( $kendo-spacing, 0.5 ) !default; // sass-lint:disable-line leading-zero
+/// The vertical padding of the medium Chip.
+/// @group chip
 $kendo-chip-md-padding-y: k-map-get( $kendo-spacing, 1 ) !default;
+/// The vertical padding of the large Chip.
+/// @group chip
 $kendo-chip-lg-padding-y: k-map-get( $kendo-spacing, 1.5 ) !default;
 
-/// Font sizes of the chip.
+/// The font size of the Chip.
 /// @group chip
 $kendo-chip-font-size: $kendo-font-size-md !default;
+/// The font size of the small Chip.
+/// @group chip
 $kendo-chip-sm-font-size: $kendo-font-size-md !default;
+/// The font size of the medium Chip.
+/// @group chip
 $kendo-chip-md-font-size: $kendo-font-size-md !default;
+/// The font size of the large Chip.
+/// @group chip
 $kendo-chip-lg-font-size: $kendo-font-size-md !default;
 
-/// Line heights of the chip that are connected to the $kendo-font-size.
+/// The Chip's line height that is related to the $kendo-font-size.
 /// @group chip
 $kendo-chip-line-height: 1 !default;
+/// The small Chip's line height that is related to the $kendo-font-size.
+/// @group chip
 $kendo-chip-sm-line-height: $kendo-chip-line-height !default;
+/// The medium Chip's line height that is related to the $kendo-font-size.
+/// @group chip
 $kendo-chip-md-line-height: $kendo-chip-line-height !default;
+/// The large Chip's line height that is related to the $kendo-font-size.
+/// @group chip
 $kendo-chip-lg-line-height: $kendo-chip-line-height !default;
 
-/// Calculated height of the chip.
+/// The calculated height of the Chip.
 /// @group chip
 $kendo-chip-calc-size: calc( #{$kendo-chip-line-height * 1em} + #{$kendo-chip-padding-y * 2} + #{$kendo-chip-border-width * 2} ) !default;
 $kendo-chip-sm-calc-size: calc( #{$kendo-chip-sm-line-height * 1em} + #{$kendo-chip-sm-padding-y * 2} + #{$kendo-chip-border-width * 2} ) !default;
 
-/// Sizes map for the chip.
+/// The map with the sizes of the Chip.
 /// @group chip
 $kendo-chip-sizes: (
     sm: (
@@ -66,11 +90,11 @@ $kendo-chip-sizes: (
     )
 ) !default;
 
-/// The base background of the chip.
+/// The base background of the Chip.
 /// @group chip
 $kendo-chip-base-bg: $kendo-button-bg !default;
 
-/// Theme colors map for the chip.
+/// The theme colors map for the Chip.
 /// @group chip
 $kendo-chip-theme-colors: (
     "base": $kendo-chip-base-bg,
@@ -80,73 +104,73 @@ $kendo-chip-theme-colors: (
     "success": k-map-get( $kendo-theme-colors, "success" )
 ) !default;
 
-/// The base background color of solid chip.
+/// The base background color of the solid Chip.
 /// @group chip
 $kendo-chip-solid-bg: $kendo-chip-base-bg !default;
-/// The base text color of solid chip.
+/// The base text color of the solid Chip.
 /// @group chip
 $kendo-chip-solid-text: $kendo-button-text !default;
-/// The base border color of solid chip.
+/// The base border color of the solid Chip.
 /// @group chip
 $kendo-chip-solid-border: $kendo-button-border !default;
-/// The base shadow of solid chip.
+/// The base shadow of the solid Chip.
 /// @group chip
 $kendo-chip-solid-shadow: 0 0 0 2px if( $kendo-is-dark-theme, rgba( $kendo-color-white, .16 ), rgba( $kendo-color-black, .16 ) ) !default;
-/// The base gradient of solid chip.
+/// The base gradient of the solid Chip.
 /// @group chip
 $kendo-chip-solid-gradient: $kendo-button-gradient !default;
 
-/// The base background color of focused solid chip.
+/// The base background color of the focused solid Chip.
 /// @group chip
 $kendo-chip-solid-focus-bg: null !default;
-/// The base text color of focused solid chip.
+/// The base text color of the focused solid Chip.
 /// @group chip
 $kendo-chip-solid-focus-text: null !default;
 
-/// The base background color of hovered solid chip.
+/// The base background color of the hovered solid Chip.
 /// @group chip
 $kendo-chip-solid-hover-bg: $kendo-button-hover-bg !default;
-/// The base text color of hovered solid chip.
+/// The base text color of the hovered solid Chip.
 /// @group chip
 $kendo-chip-solid-hover-text: null !default;
 
-/// The base background color of selected solid chip.
+/// The base background color of the selected solid Chip
 /// @group chip
 $kendo-chip-solid-selected-bg: $kendo-button-active-bg !default;
-/// The base text color of selected solid chip.
+/// The base text color of the selected solid Chip.
 /// @group chip
 $kendo-chip-solid-selected-text: null !default;
 
-/// The base background color of outline chip.
+/// The base background color of the outline Chip.
 /// @group chip
 $kendo-chip-outline-bg: $kendo-component-bg !default;
-/// The base text color of outline chip.
+/// The base text color of the outline Chip.
 /// @group chip
 $kendo-chip-outline-text: $kendo-chip-solid-text !default;
-/// The base border color of outline chip.
+/// The base border color of the outline Chip.
 /// @group chip
 $kendo-chip-outline-border: $kendo-chip-outline-text !default;
-/// The base shadow of outline chip.
+/// The base shadow of the outline Chip.
 /// @group chip
 $kendo-chip-outline-shadow: 0 0 0 2px if( $kendo-is-dark-theme, rgba( $kendo-color-white, .16 ), rgba( $kendo-color-black, .16 ) ) !default;
 
-/// The base background color of hovered outline chip.
+/// The base background color of the hovered outline Chip.
 /// @group chip
 $kendo-chip-outline-hover-bg: $kendo-chip-outline-text !default;
-/// The base text color of hovered outline chip.
+/// The base text color of the hovered outline Chip.
 /// @group chip
 $kendo-chip-outline-hover-text: k-contrast-legacy( $kendo-chip-outline-hover-bg ) !default;
 
-/// The base background color of selected outline chip.
+/// The base background color of the selected outline Chip.
 /// @group chip
 $kendo-chip-outline-selected-bg: $kendo-chip-outline-hover-bg !default;
-/// The base text color of selected outline chip.
+/// The base text color of the selected outline Chip.
 /// @group chip
 $kendo-chip-outline-selected-text: $kendo-chip-outline-hover-text !default;
 
 // Chip List
 
-/// The sizes of the chip list.
+/// The sizes of the Chip list.
 /// @group chip
 $kendo-chip-list-sizes: (
     sm: k-map-get( $kendo-spacing, 1 ),
